@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gnome-applets
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.289 2009/05/22 11:50:43 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.290 2009/05/24 14:03:24 nirbheek Exp $
+
+  24 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
+  gnome-applets-2.26.1.ebuild:
+  Either one of gst-plugins-alsa and gst-plugins-oss can be used (bug
+  270750)
 
   22 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
   gnome-applets-2.26.1.ebuild:
